--- a/public/css/general.css
+++ b/public/css/general.css
@@ -148,6 +148,8 @@ ul.nav {
     float: initial;
     display: inline-block;
   }
-
+.userheader , .userheader li{
+    display:inline-block;
+}
   /* header styling */
     </style>
