Meal Planner System Update
- Meal Planner now allows to specify the for each meal the preferred
media type.
- Added new public meal route
- meals are now linked to rather than recipes in the meal planner
display
- Meals act similar to recipes except they allow the media type filter
and show the date.

--- a/public/css/user.css
+++ b/public/css/user.css
@@ -281,9 +281,11 @@ body {
 #meal .img {
   float: right; }
 #meal .left {
-  float: left; }
+  float: left;
+  width: 40%; }
 #meal .right {
-  float: right; }
+  float: right;
+  width: 50%; }
 #meal .right .btn, #meal .right form {
   vertical-align: top; }
 
