--- a/public/css/user.css
+++ b/public/css/user.css
@@ -316,6 +316,9 @@ body#dashboard .button1, body #dashboard .button1 {
       top: -8px;
       left: 380px;
   }*/ }
+  #meal .page-container iframe, #meal .page-container video, #meal .page-container img {
+    width: 600px;
+    height: 400px; }
   #meal .three {
     position: relative;
     top: -30px;
@@ -334,6 +337,38 @@ body#dashboard .button1, body #dashboard .button1 {
     width: 50%; }
   #meal .right .btn, #meal .right form {
     vertical-align: top; }
+  @media screen and (max-width: 1300px) {
+    #meal #dashboard {
+      width: 40% !important; }
+    #meal .page-container {
+      width: 60% !important;
+      margin-top: 13%; }
+      #meal .page-container .left {
+        width: 40%; }
+        #meal .page-container .left ul {
+          padding-left: 5px; }
+      #meal .page-container .right {
+        width: 60%; }
+      #meal .page-container iframe, #meal .page-container video, #meal .page-container img {
+        width: 400px;
+        height: 266px; } }
+  @media screen and (max-width: 1000px) {
+    #meal .page-container {
+      margin-top: 15%;
+          /*.left{
+            //width: 40%;
+
+            ul{
+              padding-left:5px;
+            }
+
+          }*/
+      /*.right{
+        width:60%;
+      }*/ }
+      #meal .page-container iframe, #meal .page-container video, #meal .page-container img {
+        width: 300px;
+        height: 200px; } }
 
 /**
 *   Editor Styling
